# MatrixOperations

./: CMakeLists.txt  Equation.cpp  Equation.h  Matrix.cpp  Matrix.h  MatrixOperations.cpp  README.md  f1.cfg  f2.cfg  f3.cfg  test
DatFiles/: CMakeLists.txt
